force-app/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/cUnite_Banner_Image__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Banner_Image__c</fullName>
    <label>Banner Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>