force-app/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/Job_Finder_Badge_Open_to_Groups__c.field-meta.xml
<CustomField>
    <fullName>Job_Finder_Badge_Open_to_Groups__c</fullName>
    <description>Use this HTML output within your form components to display a badge/tag with the label &quot;Open to Groups!&quot;</description>
    <formula>if(Not(INCLUDES(FlowToolKit__Volunteer_Types__c,&apos;Groups&apos;)),&apos;&apos;,

/*** You can Customize the HTML and CSS below ***/

&apos;&lt;span style=&quot;top:0; left:0; font-size:0.6rem;&quot; class=&quot;slds-is-absolute slds-badge slds-badge_light&quot;&gt;Open to Groups!&lt;/span&gt;&apos;

)</formula>
    <label>Job Finder Badge (Open to Groups)</label>
    <type>Text</type>
</CustomField>