force-app/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/Job_Finder_Campaign_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Finder_Campaign_Event_Name__c</fullName>
    <description>This can be used to create a link to the related Campaign within your form components.</description>
    <formula>GW_Volunteers__Campaign__r.Name</formula>
    <label>Job Finder (Campaign/Event Name)</label>
    <type>Text</type>
</CustomField>