force-app/main/default/objects/GW_Volunteers__Volunteer_Job__c/fields/Job_Finder_Campaign_URL__c.field-meta.xml
<CustomField>
    <fullName>Job_Finder_Campaign_URL__c</fullName>
    <description>This can be used to create links to the related Campaign. This allows the Job Finder to work internally and within portal pages.</description>
    <formula>LEFT($Api.Enterprise_Server_URL_100,FIND(&apos;/services/Soap/&apos;, $Api.Enterprise_Server_URL_100)) +&apos;/&apos;+CASESAFEID(GW_Volunteers__Campaign__c)</formula>
    <label>Job Finder (Campaign URL)</label>
    <type>Text</type>
</CustomField>